# globillum

./: .gitignore  Makefile.am  README  barbarian.lights.scm  barbarian.scene.scm  bobble-tree.mtl  bookmarks  boxes.mtl  boxes2Obj.py  boxesColored.mtl  city.scm  configure.ac  diffImage.scene.scm  dino.lights.scm  dino.scene.scm  dinoFoot.scene.scm  dinoHead.scene.scm  gui.scm  landscape.lights.scm  landscape.scene.scm  lights.scm  local.scm  local.shader  make-plot  nogui.scm  nvcc-wrapper  plainSphere.mtl  rotateTest.lights.scm  rotateTest.scene.scm  scenes.scm  sponza.lights.scm  sponza.scene.scm  sportscar.scene.scm  sportscar2.scene.scm  teaser.cpu.scene.scm  teaser.scene.scm
doc/rnd/: Makefile  combi.cpp
doc/rta/: Makefile  use-cases.tex
materials/: Castle_Assets_Textures_M_CastleRocBG_01.pbrdf  Castle_Assets_Textures_M_GrassBlended_02.pbrdf  E3_Demo_Textures_M_CliffFace_01.pbrdf  barbarian.pbrdf  clearcoatGlossy.pbrdf  default.pbrdf  glossy.pbrdf  mBody.pbrdf  mBodyCool  mBodyGlossBlackMat.pbrdf  mBrakeRotarSilver.pbrdf  mCarbonBlack.pbrdf  mExhaustSilver.pbrdf  mGlassMat.pbrdf  mGold.pbrdf  mGomBlack.pbrdf  mInteriorBlack.pbrdf  mInteriorMonitor.pbrdf  mInteriorWhite.pbrdf  mLightReflecMat.pbrdf  mLightReflectMat.pbrdf  mMirrorMat.pbrdf  mSeatBlack.pbrdf  mSeatColor.pbrdf  mTireBlack.pbrdf  mWheelFelge.pbrdf  mWheelHubRed.pbrdf  sportscar.pbrdf  teaserShotMaterial.pbrdf  zoomShotMaterial.pbrdf
src/: Makefile.am  arealight-sampler-cpu.cpp  arealight-sampler.cu  arealight-sampler.h  cgls-lights.cu  cgls-lights.h  cmdline.cpp  cmdline.h  colormap.h  cpu-pt.cpp  cpu-pt.h  direct-lighting.cpp  direct-lighting.h  dofrays.cu  dofrays.h  gi_algorithm.cpp  gi_algorithm.h  gpu-pt-kernels.cu  gpu-pt-kernels.h  gpu-pt.cpp  gpu-pt.h  gpu_cgls_lights.cpp  gpu_cgls_lights.h  hl-main.cpp  hybrid-pt.cpp  hybrid-pt.h  lights.cpp  lights.h  main.cpp  material-conversion.cpp  material-cpu.cpp  material-wrapper.h  material.cu  material.h  materialBase.h  noscm.cpp  noscm.h  principledMaterial.h  principledParameters.h  raygen.cu  (+12 more)
